website/styles.css
* {
  scroll-margin-top: 100px;
}

body {
  font-family: sans-serif;
  line-height: 1.5;
  margin: 0;
  background-color: rgb(254, 252, 245);
}

.container {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 1rem;
}

form {
  background-color: white;
  height: auto;
  min-width: 235px;
  max-width: min(400px, 95vw);
  padding: 15px;
  margin-bottom: 3rem;
  border-radius: 5px;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
  display: flex;
  flex-direction: column;
}

h1 {
  font-size: calc(1.375rem + 1.5vw);
  font-weight: 500;
  line-height: 1.2;
}

#loader {
  border: 16px solid #f3f3f3;
  border-top: 16px solid #016876;
  border-radius: 50%;
  width: 60px;
  height: 60px;
  animation: spin 2s linear infinite;
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}

table {
  background-color: white;
  border-collapse: collapse;
  margin: 25px 0;
  font-size: 0.9em;
  max-width: 95vw;
  font-family: sans-serif;
  box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
}

thead tr {
  background-color: #009879;
  color: #ffffff;
  text-align: left;
}

th, td {
  padding: 12px 15px;
}

@media screen and (max-width: 400px) {
  th, td {
    padding: 6px;
  }
}

tbody tr {
  border-bottom: 1px solid #dddddd;
}

tbody tr:n-th-of-type(even) {
  background-color: #f3f3f3;
}

tbody tr:last-of-type {
  border-bottom: 2px solid #009879;
}

td.personal-best {
  background-color: #009879;
  font-weight: 600;
  color: white;
}

form input, form select, form button {
  font-size: 1em;
  padding: 10px;
  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  border: 1px solid #ddd;
  border-radius: 5px;
  margin-bottom: 10px;
  width: 100%;
}

#submitBtn {
  background-color: #009879;
  color: #fff;
  border: none;
  cursor: pointer;
  transition: background-color 0.3s ease;
}

#submitBtn:hover {
  background-color: #007f63;
}

input[type=text], select {
  height: 45px;
  box-sizing: border-box;
  background: white;
  color: rgb(0, 0, 0);
}

input::placeholder {
  color: rgb(0, 0, 0, 0.4) !important;
}

select {
  color: rgb(0, 0, 0, 0.4);
}

.option-selected-color {
  color: rgb(0, 0, 0);
}

#results {
  display: flex;
  flex-direction: column;
  align-items: center;
}

#results p {
  max-width: 95vw;
}

.contact {
  background-color: #016876;
  padding-top: 10px;
  padding-bottom: 10px;
  width: 100%;
  position: sticky;
  top: 0;
  transition: top 0.3s ease-out;
  z-index: 10;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
}

.contact p {
  margin: 0;
  color: white;
  text-align: center;
}

.contact a {
  text-decoration: none;
  color: white;
}

.icon {
  height: 18px;
  width: 18px;
  position: relative;
  bottom: -4px;
}

.smaller-icon {
  height: 15px;
  width: 15px;
  position: relative;
  bottom: -2px;
}

.media-icon-spacing {
  display: none;
}

@media only screen and (min-width: 700px) {
  .media-line-break {
    display: none;
  }
  .media-icon-spacing {
    display: inline;
  }
}

.contact a {
  font-weight: 600;
}

.text-center {
  text-align: center;
}

.text-break {
  word-break: break-word;
}

.container p {
  text-align: center;
}

